<resources>
    <color name="white">#FFFFFF</color>
    <color name="pink">#FF3399</color>
    <color name="blue">#ff6d95ff</color>
    <color name="purple">#ffa75aff</color>
    <color name="green">#009933</color>
    <color name="red">#ff0000</color>
    <color name="yellow">#ffff00</color>
    <string name="app_name">Fuel Finder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_startup">StartupActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="YearOfMfr">Year</string>
    <string name="Manufacturer">Make</string>
    <string name="VehModel">Model</string>
    <string name="FuelMileage">Average Mileage</string>
    <string name="EngineSize">Engine Size</string>
    <string name="Transmission">Transmission Type</string>

    <string name="picker_page">Picker Page</string>
    <string name="station_grid">Pick Station Myself</string>
    <string name="map">Find Me Fuel!</string>
    <string name="enter_another">Enter another vehicle</string>
    <string name="title_activity_mileage">MileageActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_ihttp_callback_listener">IHttpCallbackListener</string>
    <string name="title_activity_mileage_parser">MileageParser</string>
    <string name="title_activity_http_request_manager">HttpRequestManager</string>
    <string name="title_activity_mileage_data_manager">MileageDataManager</string>
    <string name="title_activity_mileage_search_request_args">MileageSearchRequestArgs</string>
    <string name="title_activity_urlformat_utility">URLFormatUtility</string>
    <string name="title_activity_station_picker">StationPickerActivity</string>
    <string name="title_activity_pick_cheapest">PickCheapest</string>
    <string name="Price1">$ %1$s </string>
    <string name="Price2">$ %1$s </string>
    <string name="Price3">$ %1$s </string>
    <string name="Price4">$ %1$s </string>
    <string name="hintFuelMileage">Enter Fuel Mileage</string>
    <string name="hintGiveCarName">Give Your Car a Name!</string>
    <string name="hintYearOfManufacture">Enter Year of Manufacturer</string>
    <string name="hintManufacturer">Enter Manufacturer</string>
    <string name="hintModel">Enter Vehicle Model</string>
    <string name="hintEngineSize">Enter Engine Size</string>
    <string name="hintTransmission">Enter Transmission Type</string>




    <string name="spinner_title">Select Category</string>
    <string name="selectVehicle">selectVehicle</string>
    <string name="title_activity_select_from_database">selectFromDatabase</string>
    <string name="delete_vehicle">delete</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
