<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DisplayContact"
    android:background = "@color/white">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="fuelfinder.mann.Activity.SettingsActivity"
        android:background="#ffffff">


    <!-- Spinner Element -->
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />



    <Button

        android:layout_marginTop="120dip"
        android:background="@color/button_material_dark"
        android:id="@+id/moreInputsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_another"
        android:width="120dp"
        android:layout_below="@+id/spinner"
        android:layout_alignParentRight="true" />


    <Button
        android:background="@color/button_material_light"
        android:id="@+id/pickFourButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_grid"
        android:width="120dp"
        android:layout_below="@+id/moreInputsButton"
        android:layout_centerHorizontal="true" />


    <Button
        android:background="@color/button_material_dark"
        android:id="@+id/selectVehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectVehicle"
        android:width="120dp"
        android:layout_alignBottom="@+id/moreInputsButton"
        android:layout_alignParentStart="true" />

        <Button
            android:background="@color/wallet_holo_blue_light"
            android:id="@+id/pickTheBestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:width="120dp"
            android:layout_alignLeft="@+id/pickFourButton"
            android:layout_alignStart="@+id/pickFourButton"
            android:layout_below="@+id/pickFourButton" />



        <requestFocus />

    </RelativeLayout>
</ScrollView>