<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fuelfinder.mann.Activity.StationPickerActivity"
    android:background="#000000">






    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DEDEDE"/>

    <View
        android:id="@+id/topline"
        android:layout_width="fill_parent"
        android:layout_height="6dp"
        android:background="@color/blue"/>
    <View
        android:id="@+id/leftline"
        android:layout_width="6dp"
        android:layout_height="fill_parent"
        android:background="@color/blue"/>
    <View
        android:id="@+id/midhorizline"
        android:layout_centerVertical="true"
        android:layout_width="fill_parent"
        android:layout_height="6dp"
        android:background="@color/blue"/>
    <View
        android:id="@+id/botline"
        android:layout_alignParentBottom="true"
        android:layout_height="6dp"
        android:layout_width="fill_parent"
        android:background="@color/blue"/>
    <View
        android:id="@+id/rightline"
        android:layout_alignParentRight="true"
        android:layout_width="6dp"
        android:layout_height="fill_parent"
        android:background="@color/blue"/>
    <View
        android:id="@+id/midvertline"
        android:layout_centerHorizontal="true"
        android:layout_width="6dp"
        android:layout_height="fill_parent"
        android:background="@color/blue"/>

    <Button
        android:background="@color/blue"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Station 2"
        android:id="@+id/checkBox2"
        android:checked="false"
        android:layout_below="@+id/topline"
        android:layout_alignLeft="@+id/midvertline"
        android:layout_alignRight="@+id/rightline"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>


    <Button
        android:background="@color/blue"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Station 1"
        android:id="@+id/checkBox"
        android:checked="false"
        android:layout_below="@+id/topline"
        android:layout_alignLeft="@+id/leftline"
        android:layout_alignRight="@+id/midvertline"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
    />

    <Button
        android:background="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Station 3"
        android:id="@+id/checkBox3"
        android:checked="false"
        android:layout_below="@+id/midhorizline"
        android:layout_alignLeft="@+id/leftline"
        android:layout_alignRight="@+id/midvertline"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:background="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Station 4"
        android:id="@+id/checkBox4"
        android:layout_gravity="end"
        android:checked="false"
        android:layout_below="@+id/midhorizline"
        android:layout_alignLeft="@+id/midvertline"
        android:layout_alignRight="@+id/rightline"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Cost Per Gallon:"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/textView"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Price1"
        android:id="@+id/textView10"
        android:layout_alignTop="@+id/textView12"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:textColor="#000000"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Price3"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Price4"
        android:id="@+id/textView14"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox2"
        android:textColor="#000000"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Price2"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:textColor="#000000"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Cost Per Gallon:"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/textView"
        android:layout_alignLeft="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox2"
        android:textColor="#000000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Cost Per Gallon:"
        android:id="@+id/textView3"
        android:layout_below="@+id/checkBox3"
        android:layout_alignLeft="@+id/checkBox3"
        android:layout_alignStart="@+id/checkBox3"
        android:layout_marginTop="10dp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Cost Per Gallon:"
        android:id="@+id/textView4"
        android:layout_below="@+id/checkBox4"
        android:layout_alignLeft="@+id/checkBox4"
        android:layout_alignStart="@+id/checkBox4"
        android:layout_marginTop="10dp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Trip Cost:"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView10"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:textColor="#000000"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Trip Cost:"
        android:id="@+id/textView17"
        android:textColor="#000000"
        android:layout_alignTop="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Trip Cost:"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView12"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:textColor="#000000"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Trip Cost:"
        android:id="@+id/textView13"
        android:textColor="#000000"
        android:layout_alignTop="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Trip Cost:"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView11"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Trip Cost:"
        android:id="@+id/textView16"
        android:textColor="#000000"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignLeft="@+id/textView17"
        android:layout_alignStart="@+id/textView17" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Trip Cost:"
        android:id="@+id/textView8"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:textColor="#000000"/>

    <TextView
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Trip Cost:"
        android:id="@+id/textView15"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignLeft="@+id/textView13"
        android:layout_alignStart="@+id/textView13" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />


    <fragment
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignRight="@+id/midvertline"
        android:layout_alignLeft="@+id/leftline"
        android:layout_above="@+id/midhorizline"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        />

    <fragment
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignRight="@+id/rightline"
        android:layout_alignLeft="@+id/midvertline"
        android:layout_above="@+id/midhorizline"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        />

    <fragment
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_alignRight="@+id/rightline"
        android:layout_alignLeft="@+id/midvertline"
        android:layout_above="@+id/botline"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        />

    <fragment
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_alignRight="@+id/midvertline"
        android:layout_alignLeft="@+id/leftline"
        android:layout_above="@+id/botline"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        />


</RelativeLayout>

